--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: "Eve Wang — Physics × CS"
 subtitle: "Quantum & Materials · Scientific Computing · Outreach"
-repository: "codeyummyy/personal_test"  # <-- change to your repo
-url: "https://codeyummyy.github.io"   # set to "https://codeyummyy.github.io"
+repository: "eve/personal_test"  # <-- change to your repo
+url: "https://eve.github.io"   # set to "https://<your-username>.github.io"
 baseurl: "/personal_test"
 
 # Build settings
@@ -15,7 +15,7 @@ plugins:
 # Author
 author:
   name: "Hung-Yu (Eve) Wang"
-  avatar: "{{ site.baseurl }}assets/img/hero.jpg"
+  avatar: "assets/img/hero.jpg"
   bio: "Physics × CS | NTU Physics Talent Program · NSRRC AES/AED · Science communication (TEDx)"
   location: "Hsinchu, Taiwan"
   email: "eve.applications@proton.me"  # <-- change to your email
@@ -46,7 +46,7 @@ defaults:
       author_profile: true
 
 # Per-page defaults
-teaser: "{{ site.baseurl }}assets/img/hero.jpg"
+teaser: "assets/img/hero.jpg"
 
 # Analytics (optional)
 analytics:
