--- a/_config.yml
+++ b/_config.yml
@@ -1,37 +1,32 @@
-m# Site settings
-title: "Eve Wang — Physics × CS"
-subtitle: "Quantum & Materials · Scientific Computing · Outreach"
-repository: "codeyummyy/personal_test"  # <-- change to your repo
-url: "https://codeyummyy.github.io"   # set to "https://<your-username>.github.io"
+title: "Eve Wang — Physics x CS"
+subtitle: "Quantum, Materials, Scientific Computing, Outreach"
+
+# REQUIRED for your repo
+repository: "eve/personal_test"
+url: "https://eve.github.io"
 baseurl: "/personal_test"
 
-# Build settings
 remote_theme: "academicpages/academicpages"
+
 plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-remote-theme
 
-# Author
 author:
   name: "Hung-Yu (Eve) Wang"
   avatar: "assets/img/hero.jpg"
-  bio: "Physics × CS | NTU Physics Talent Program · NSRRC AES/AED · Science communication (TEDx)"
+  bio: "Physics x CS | NTU Physics Talent Program · NSRRC AES/AED · TEDx"
   location: "Hsinchu, Taiwan"
-  email: "eve.applications@proton.me"  # <-- change to your email
-  github: "eve-wang"                    # <-- change to your GitHub username
-  scholar: ""                           # optional
-  orcid: ""                             # optional
-  twitter: ""                           # optional
+  email: "eve.applications@proton.me"
+  github: "eve"
 
-# Collections
 collections:
   teaching:
     output: true
   projects:
     output: true
 
-# Defaults
 defaults:
   - scope:
       path: ""
@@ -45,12 +40,5 @@ defaults:
       layout: "single"
       author_profile: true
 
-# Per-page defaults
 teaser: "assets/img/hero.jpg"
-
-# Analytics (optional)
-analytics:
-  provider: false
-
-# Footer note
 last_updated: "2025-10"
