--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,13 @@ repository: "codeyummyy/personal_test"
 url: "https://codeyummyy.github.io"
 baseurl: "/personal_test"
 
-remote_theme: "academicpages/academicpages"
-
+remote_theme: "academicpages/academicpages.github.io"   # <-- correct repo
 plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-remote-theme
+
+  
 
 author:
   name: "Hung-Yu (Eve) Wang"
